Closed Bug 1578448 Opened 5 years ago Closed 5 years ago

img.complete does not become false immediately when a srcset attribute is set on the image

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: bzbarsky, Assigned: edgar, NeedInfo)

References

Details

Attachments

(1 file)

Per spec at https://html.spec.whatwg.org/multipage/embedded-content.html#dom-img-complete it should, as far as I can tell: the first two bullet points stop applying immediately, and the last two points can only start to apply async when srcset is involved, right?

Flags: needinfo?(echen)

Bug 1578419 adds more tests.

Assignee: nobody → echen
Depends on: 1578419
Flags: needinfo?(echen)
Priority: -- → P2

If the img has srcset attribute and the current request isn't complete or broken,
the img.complete should return false per spec,
https://html.spec.whatwg.org/multipage/embedded-content.html#dom-img-complete.

We should check srcset or src attribute, checking only mCurrentRequest isn't
enough given that updating mCurrentRequest happens async.

Depends on: 1579088
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b5d436985831 Make img.complete align with spec; r=bzbarsky
Flags: needinfo?(echen)

(In reply to Noemi Erli[:noemi_erli] from comment #7)

Backed out 2 changesets (Bug 1543810) for failing in browser_togglePointerEventsNone.js CLOSED TREE

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=266136994&repo=autoland&lineNumber=22333

Backout: https://hg.mozilla.org/integration/autoland/rev/8a08bd085c4abf6ce2fcf331c2b8245e4190786a

Is the patch of this bug backed out, too? It doesn't look like the change in this bug will causes the failure in browser_togglePointerEventsNone.js.

Flags: needinfo?(echen) → needinfo?(nerli)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Flags: needinfo?(nerli)

Sheppy, would this affect the HTMLImageElement docs you've been writing?

Flags: needinfo?(eshepherd)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: