Bug 1578448 - Make img.complete align with spec; r=bzbarsky

If the img has srcset attribute and the current request isn't complete or broken,
the img.complete should return false per spec,
https://html.spec.whatwg.org/multipage/embedded-content.html#dom-img-complete.

We should check srcset or src attribute, checking only mCurrentRequest isn't
enough given that updating mCurrentRequest happens async.

Differential Revision: https://phabricator.services.mozilla.com/D44678